Rewrote the code that associates treeview nodes with pgSchema objects. The new code is faster and more reliable.
Correctly recognise functions with one opaque argument.
Filter functions listed when creating Types & Operators to only those that are suitable.
Only quote identifiers when required.

1.2.0 Stable
------------

Allow use of new serial8 type.
Warn user that serial-created sequences & indexes must be manually committed to Revision Control.
Tweak efficiency of the Comment cache in pgSchema (~30% faster population of cache).
Distribute non Win2K riched32.dll.
Update other column properties before renaming for safety.
Set Unknowns As LongVarChar when connecting to allow ACLs > 255 characters.
Added features list to help.
Added bugs and to-do lists to help menu (missing for some reason).
Added release procedure to help.
Fixed a typo in the licence.
Updated Copyright notices to include 2002.

1.1.76
------

Don't reformat SQL queries as that can corrupt PL scripts.
Clear Relationships/Referenced Columns when selecting a new Referenced Table when defining a Foreign Key.
Correctly escape single quotes & backslashes in function code.
Print function source nicely in the properties listview.
Set MAX_VARCHAR_LENGTH to 64Kb so we don't truncate long functions etc.
Allow double-clicking of items in the listview.
Display some missing Server Properties in the listview.
Switch on Commlog/Mylog when loglevel is high enough.
Added SSH Tunneling HOWTO from Fred Yankowski.
Fixed the Highlightbox control so it doesn't strip braces {} from text.
Added support for PostgreSQL 7.2 style ACLs (seperated Update/Delete, added References & Trigger) in the Security Wizard.
Support 64Bit sequences properly on PostgreSQL 7.2+
Added Revision Control HOWTO to Help.
Added Links page to Help.

1.1.72
------

Fixed a bug in the row identification code in the Edit Grid when deleting records.
Added a Cancel option to the Save SQL Query? prompt.