@@ -16,7 +16,7 @@ CompatibleEXE32="..\..\..\binaries\pgAbsExp.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=40
+RevisionVer=41
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H7a890000
