@@ -23,7 +23,7 @@ CompatibleEXE32="..\..\..\binaries\pgASCII.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=39
+RevisionVer=40
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H37b0000
