@@ -19,7 +19,7 @@ CompatibleEXE32="..\..\..\binaries\pgHTML.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=36
+RevisionVer=37
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H24a20000
