@@ -22,13 +22,16 @@
 
 <p><b>Functionality - </b>These are priority items that are easily possible through SQL.</p>
 <ul>
-  <li>Allow dropping of UNIQUE & PRIMARY contraints by dropping the relevant index.<br>&nbsp;</li>
   <li>Add code to allow pseudo-editing of  Triggers &amp; Tables. 
   This would be implemented in pgSchema and would generally involve dropping 
   object and re-creating them with the new changes applied.<br>&nbsp;</li>
   <li>Allow use of arrays in columns.<br>
 &nbsp;</li>
-  <li>Add support for Function &amp; Language ACLs in PostgreSQL 7.3+.</li>
+  <li>Add support for Function &amp; Language ACLs in PostgreSQL 7.3+.<br>
+&nbsp;</li>
+  <li>Allow updating of trigger names in PostgreSQL 7.3+<br>
+&nbsp;</li>
+  <li>Allow setting of default variables on specific databases (ALTER DATABASE)</li>
 </ul>
 <p><b>Essential Enhancements</b> - These are items that should be considered important, but are not necessarily easy, or even possible.</p>
 <ul>
