@@ -64,7 +64,7 @@ Description="PostgreSQL Tools"
 CompatibleMode="0"
 MajorVer=1
 MinorVer=3
-RevisionVer=47
+RevisionVer=48
 AutoIncrementVer=1
 ServerSupportFiles=0
 VersionCompanyName="The pgAdmin Development Team"
