@@ -17,7 +17,7 @@ CompatibleEXE32="..\..\..\binaries\pgAbsPlg.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=35
+RevisionVer=36
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H33540000
