@@ -27,7 +27,7 @@ CompatibleEXE32="..\..\..\binaries\pgImport.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=36
+RevisionVer=37
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H1940000
