@@ -29,7 +29,7 @@ CompatibleEXE32="..\..\..\binaries\pgMigration.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=42
+RevisionVer=43
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H4a390000
