@@ -25,7 +25,7 @@ CompatibleEXE32="..\..\..\binaries\pgMSysConf.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=36
+RevisionVer=37
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H4c400000
