@@ -26,7 +26,7 @@ CompatibleEXE32="..\..\..\binaries\pgPublishing.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=37
+RevisionVer=38
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H66ae0000
