@@ -25,7 +25,7 @@ CompatibleEXE32="..\..\..\binaries\pgSecurity.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=37
+RevisionVer=38
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H6d4b0000
