@@ -61,7 +61,7 @@ CompatibleEXE32="..\binaries\pgSchema.dll"
 VersionCompatible32="1"
 MajorVer=1
 MinorVer=3
-RevisionVer=104
+RevisionVer=108
 AutoIncrementVer=1
 ServerSupportFiles=0
 DllBaseAddress=&H153d0000
